better snippets in example page

--- a/example/index.css
+++ b/example/index.css
@@ -1,3 +1,14 @@
 body {
+  background-color: white;
+  color: black;
   font-family: "Avenir Next","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+pre {
+  color: black;
+  background-color: lightgrey;
+}
+
+pre code {
+  font-size: x-large;
 }
